Cascading Change Log

2.0.0 [unreleased]

  Fixed issue where c.p.a.AggregateBy.AveragePartials functor was using fixed declared fields.

  Added the "cascading.aggregateby.threshold" property so that a default threshold can be set for the
  c.p.a.AggregateBy sub-assemblies.

  Added the c.m.UnitOfWork interface to give c.f.Flow and c.c.Cascade a common contract.

  Changed c.t.h.TupleSerialization#setSerializations() to force TupleSerialization and o.a.h.i.s.WritableSerialization
  are first in the "io.serializations" list.

  Added support for properties scoped at the pipe or process scope. Process scope properties will be inherited by
  the current job if any.

  Added c.t.SpillableTupleMap to allow durable groups during asymmetrical joins.

  Changed c.t.SpillableTupleList to implement c.u.Collection and c.t.Spillable interfaces.

  Renamed the c.p.Group class to c.p.Splice and created a c.p.Group interface. c.p.Groupby, CoGroup, Merge, and Join
  are all c.p.Splice types. Only GroupBy and CoGroup are c.p.Group types.

  Moved all "joiners" to c.p.joiner package from c.p.cogroup as they are now shared with the c.p.Join pipe.

  Added c.p.Join pipe to join two or more streams by a common key value without blocking/accumulating the largest
  data stream. This differs from c.p.CoGroup in that there is no grouping or sorting, and on the MapReduce platform,
  no Reduce task. The is commonly known as an asymmetrical or replicated join.

  Changed c.t.h.TupleSerialization#setSerializations() to always include o.a.h.i.s.WritableSerialization as some
  Hadoop versions do not include it if omitted. WritableSerialization is required by c.t.h.MultiInputSplit.

  Added c.p.Merge pipe to create a union of multiple tuple streams. This differs from c.p.GroupBy in that there
  is no grouping or sorting, and on the MapReduce platform, no Reduce task.

  Added c.t.Tap#commitResource() && #rollbackResource() to allow the underlying resource to be notified write processing