@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.0.0 [unreleased]
 
+  Fixed issue where a c.p.GroupBy merge of branches with the same names threw a NPE.
+
   Fixed issue where c.p.a.AggregateBy.AveragePartials functor was using fixed declared fields.
 
   Added the "cascading.aggregateby.threshold" property so that a default threshold can be set for the
